k8s/frontend.yaml
# week08/k8s/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: week10abhiacr.azurecr.io/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-w08e1 # Service name matches
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # The port the service listens on inside the cluster
      targetPort: 80 # The port on the Pod (containerPort where Nginx runs)
  type: LoadBalancer # Exposes the service on a port on each Node's IP
