k8s/order-service.yaml
# week08/k8s/order-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-w08e1 # Deployment name matches
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service-container
        image: week10abhiacr.azurecr.io/order_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-w08e1
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
  type: LoadBalancer
